# Conduit

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  conduit-huddle-deep-research-report.md  eu.vanadrighem.conduit.json  eu.vanadrighem.conduit.json~  implementation_plan.text  meson.build  meson_options.txt  release-please-config.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/maintainer/: context.md  contributors.md  decisions.md  patterns.md  runs.md  standing-rules.md  state.json
.github/maintainer/notes/: issue-1.md  issue-10.md  issue-11.md  issue-12.md  issue-13.md  issue-14.md  issue-2.md  issue-3.md  issue-4.md  issue-5.md  issue-6.md  issue-7.md  issue-9.md  pr-8.md
.github/maintainer/work/: 2026-06-17-maintenance-brief.md  2026-06-19-maintenance-brief.md
.github/workflows/: ci.yml  release.yml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/code_styleguides/: general.md  rust.md
conductor/tracks/architecture_ux_20260710/: metadata.json  plan.md  spec.md
conductor/tracks/conversation_switcher_perf_20260720/: metadata.json  plan.md  spec.md
conductor/tracks/desktop_notifications_20260707/: metadata.json  plan.md  spec.md
conductor/tracks/external_slack_links_20260718/: metadata.json  plan.md  spec.md
conductor/tracks/instant_channel_loading_20260707/: metadata.json  plan.md  spec.md
conductor/tracks/native_huddles_20260718/: metadata.json  plan.md  spec.md
conductor/tracks/notification_relevance_20260721/: metadata.json  plan.md  spec.md
conductor/tracks/release_automation_20260720/: metadata.json  plan.md  spec.md
conductor/tracks/runtime_architecture_20260716/: metadata.json  plan.md  spec.md
conductor/tracks/slack_parity_20260630/: metadata.json  plan.md  spec.md
conductor/tracks/speed_cache_20260703/: metadata.json  plan.md  spec.md
conductor/tracks/unread_sidebar_bold_20260707/: metadata.json  plan.md  spec.md
conductor/tracks/workspace_pipeline_rearchitecture_20260720/: metadata.json  plan.md  spec.md
conductor/tracks/xoxc_xoxd_auth_20260630/: metadata.json  plan.md  spec.md
data/: eu.vanadrighem.conduit.desktop.in  eu.vanadrighem.conduit.gschema.xml  eu.vanadrighem.conduit.metainfo.xml.in  eu.vanadrighem.conduit.search-provider.ini  eu.vanadrighem.conduit.service.in  meson.build
data/icons/: meson.build
docs/: activity-notifications-design.md  attention-and-notifications.md  autonomous-implementation-plan.md  composer-rendering-design.md  history-and-read-state-design.md  huddles.md  local-state-and-sync-design.md  modernization-plan.md  realtime-sync-design.md  release-checklist.md  releases.md  search-files-directories-design.md  sidebar-1.0-update-plan.md  sidebar-design.md  sidebar-improvement-plan.md  slack-product-surfaces-design.md  workspace-navigation-design.md
packaging/debian/: changelog.in  control  copyright  rules
packaging/flatpak/: cargo-sources.json  eu.vanadrighem.conduit.json
packaging/rpm/: conduit.spec
po/: POTFILES.in  meson.build
src/: activity.rs  application.rs  attention.rs  attention_metrics.rs  attention_settings.rs  auth.rs  composer.rs  conduit.gresource.xml  config.rs  conversation_catalog.rs  debug.rs  drafts.rs  emoji.rs  gnome_search_provider.rs  main.rs  meson.build  message_html.rs  models.rs  realtime.rs  rendering.rs  runtime.rs  search.rs  shortcuts-dialog.ui  shortcuts.rs  sidebar.rs  sidebar_widgets.rs  slack.rs  slack_link.rs  socket_mode.rs  store.rs  thread_catalog.rs  thread_pane.rs  timeline_dom_runtime.js  timestamp_localization.js  window.rs  window.ui  workspace_pipeline.rs  workspace_state.rs
src/huddles/: coordinator.rs  devices.rs  fallback.rs  harness.rs  media.rs  mod.rs  model.rs  portal.rs  presentation.rs  signaling.rs  state.rs
src/services/: conversation_history.rs  mod.rs
tests/: meson.build  run_headless.py  test_branding_assets.py  test_huddle_ui.py  test_keyboard_shortcuts.py  test_notification_preferences.py  test_release_automation.py  test_search_provider.py  test_search_provider_metadata.py  test_slack_uri_activation.py  test_timeline_scroll.py  test_timestamp_localization.py  test_window_state.py
