[package]
name = "conduit"
version = "0.1.0"
edition = "2021"

[features]
default = []
huddle-harness = []
native-media = [
  "dep:gstreamer",
  "dep:gstreamer-sdp",
  "dep:gstreamer-webrtc",
]
screen-share = ["native-media", "dep:ashpd"]

[dependencies]
anyhow = "1.0"
ashpd = { version = "=0.11.1", optional = true, default-features = false, features = ["tokio", "gtk4"] }
base64 = "0.22"
emojis = "0.9"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
gdk-pixbuf = "0.20"
gstreamer = { version = "0.23.7", optional = true, features = ["v1_24"] }
gstreamer-sdp = { version = "0.23.5", optional = true, features = ["v1_24"] }
gstreamer-webrtc = { version = "0.23.5", optional = true, features = ["v1_24"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.9", package = "gtk4", features = ["gnome_46"] }
keyring = { version = "3.6.3", default-features = false, features = ["sync-secret-service", "crypto-rust"] }
open = "5.3"
pulldown-cmark = "0.13"
rand = "0.9"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "form", "multipart", "stream", "system-proxy"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
slack-blocks = "0.25"
slack-morphism = { version = "2.22.0", default-features = false }
tiny_http = "0.12"
thiserror = "2.0"
tokio = { version = "1.52", features = ["fs", "io-util", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
urlencoding = "2.1"
unicode-normalization = "0.1"
webkit6 = "0.4"

[dependencies.adw]
package = "libadwaita"
version = "0.7"
features = ["v1_5"]
