option(
  'slack_client_id',
  type: 'string',
  value: '',
  description: 'Slack OAuth client ID for packaged builds',
)

option(
  'native_media',
  type: 'feature',
  value: 'disabled',
  description: 'Build the optional GStreamer WebRTC huddle media engine',
)

option(
  'screen_share',
  type: 'feature',
  value: 'disabled',
  description: 'Build portal-based huddle screen sharing (requires native_media)',
)

option(
  'huddle_harness',
  type: 'boolean',
  value: false,
  description: 'Build the native huddle test harness',
)

option(
  'headless_tests',
  type: 'feature',
  value: 'auto',
  description: 'Build and run the complete X11 headless test suite',
)
